# opencode2claude

./: .bridge.pids  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  bridge.py  client_tools.json  deny.toml  install.sh  start.sh  stop.sh
.github/workflows/: ci.yml  release.yml
docs/: cli.md  health-status.md  migration-from-start-sh.md  proxy-pool.md
docs/superpowers/plans/: 2026-06-29-verification-ecosystem.md  2026-06-30-v0.3.1-cleanup.md
docs/superpowers/specs/: 2026-06-28-resilience-hotspare-proxy-design.md  (+1 more)
scripts/: verify.sh
scripts/lib/: cargo.sh  common.sh  process.sh  report.sh
scripts/phases/: phase-1-cli-skeleton.sh  phase-2-runtime-pid.sh  phase-3-security.sh  phase-4-proxy-cli.sh  phase-5-proxy-pool-fix.sh  phase-6-health-status-log.sh  phase-7-docs-migration.sh  phase-8-ci-release.sh
src/: cli.rs  config.rs  config_BACKUP_209589.rs  docker.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  opencode.rs  pidfile.rs  proxy_pool.rs  runtime.rs  shell.rs  sse.rs  state.rs  supervisor.rs
src/opencode/: forward.rs  mapper.rs  mod.rs  retry.rs  sanitize.rs  search.rs  types.rs
src/proxy_pool/: maintenance.rs  mod.rs  routing.rs  types.rs
tests/: fast.rs  integration.rs
tests/common/: mod.rs
verification/: README.md
verification/phases/: phase-1-cli-skeleton.md  phase-2-runtime-pid.md  phase-3-security.md  phase-4-proxy-cli.md  phase-5-proxy-pool-fix.md  phase-6-health-status-log.md  phase-7-docs-migration.md  phase-8-ci-release.md
