[package]
name = "opencode2claude"
version = "0.2.0"
edition = "2021"
description = "Use Claude Code with any LLM (DeepSeek, GPT-4o, Gemini, Llama, etc.) — for free"
license = "MIT"
homepage = "https://github.com/nmhuei/opencode2claude"
repository = "https://github.com/nmhuei/opencode2claude"
readme = "README.md"
keywords = ["claude", "opencode", "llm", "proxy", "cli"]
categories = ["command-line-utilities", "web-programming", "development-tools"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream", "socks"] }
tower = { version = "0.4", features = ["limit", "buffer", "util"] }
tower-http = { version = "0.5", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "socks"] }
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
